[package]
name = "alpinejs_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
lsp-server = "0.7.4"
serde = { version = "1.0.190", features = ["derive"] }
crossbeam-channel = "0.5.8"
serde_json = "1.0.107"
lsp-types = "0.94.1"

